deploy/apps/collector/base/web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: collectorshop
  labels:
    app.kubernetes.io/name: web-app
spec:
  selector:
    app.kubernetes.io/name: web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: collectorshop
  labels:
    app.kubernetes.io/name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
    spec:
      containers:
        - name: web-app
          image: ghcr.io/stanthbd/collectorshop/web-app:dev
          imagePullPolicy: IfNotPresent
          imagePullSecrets:
            - name: regcred
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
