deploy/apps/collector/base/ingress-management.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-ui
  namespace: collectorshop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
